# AutoScholar

./: .claudeignore  .gitignore  CLAUDE.md  PAPER_WORKFLOW.md  PROJECT_SKILLS_WORKFLOW.md  README.md  RECOMMENDATION_AUTO_CORRECTION.md  SKILL.md  SKILL2.md  handout-skill设计思路.md  pyproject.toml  requirements.txt
.agents/skills/autoscholar/: SKILL.md
.agents/skills/citation-workflow/: SKILL.md
.agents/skills/handout/: SKILL.md
.agents/skills/idea-creation/: SKILL.md
.agents/skills/idea-creation-v2/: README.md
.agents/skills/idea-evaluation/: SKILL.md
.autoscholar/example/: input.md
SemanticScholarApi/: api.py
config/: claim_recommendation_rules.yaml  recommendation_auto_correct.yaml
docs/: PROJECT_SKILLS_WORKFLOW.md
docs/design/: journal-fit-advisor_dev_spec.md
handouts/openworldrecognition-terminology/: handout.yaml
idea-creation-v2/idea-creation-v2/: SKILL.md
scripts/: batch_semantic_scholar_search.py  dedupe_and_prescreen_semantic_scholar.py  generate_claim_recommendation_list.py  generate_references_bib.py  pdf_to_text.py  recommendation_auto_correct.py  resumable_novelty_verification.py  run_handout_openalex.py
scripts/SemanticScholarApi/: __init__.py  api.py
scripts/openalex/: __init__.py  api.py
src/autoscholar/: cli.py  exceptions.py  handout.py  io.py  openalex_crawl.py  semantic_crawl.py  workspace.py
tests/: conftest.py  test_cli.py  test_handout.py  test_journal_fit.py  test_live_smoke.py  test_openalex_client.py  test_openalex_compat.py  test_openalex_crawl.py  test_semantic_compat.py  test_semantic_crawl.py  test_workflows.py
(+89 files in other folders)
